# FERS

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .glf.json  .prettierignore  .prettierrc  AUTHORS  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  ChangeLog  Doxyfile  INSTALL  README  README.md  SECURITY.md  about.toml  biome.json  config.h.cmake  migrate_fers_xml.py  package.json  pnpm-lock.yaml  run_tests_gen_coverage.sh  rustfmt.toml  vcpkg.json
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  feature_request.yml
.github/workflows/: CMake.yml  ReleaseCMake.yml  core.yml  docs.yml  ui.yml  wiki.yml
THIRD_PARTY_LICENSES/: js-licenses.txt  libhdf5-LICENSE.txt  rust-licenses.html
cmake/: FersCompilerWarnings.cmake  FersEmbedFile.cmake  FersOptions.cmake
config_validators/: CMakeLists.txt  README.md  kml_visualiser.cpp  validator.cpp  xml_validator_output.cpp
doc/equations/: equations.bib  equations.tex
doc/timing/: model.dia  timing.bib  timing.kilepr  timing.tex
docs/: CMakeLists.txt  Doxyfile  README.md  custom.css  header.html.in
docs/wiki/: Examples.md  FERS-CLI.md  FERS-UI.md  Home.md  Installing-FERS.md  Simulation-Pipelines.md  Using-FERS.md  XML-Schema-Reference.md  _Sidebar.md  libfers.md
examples/: .gitignore  example_antenna_pattern.xml  example_target_rcs.xml
examples/fmcw_bistatic_external_dechirp/: analysis.py  example.fersxml
examples/fmcw_monostatic_dechirp/: analysis.py  example.fersxml
examples/mixed_scenario/: analysis.py  example.fersxml  genpulse.py
fftwcpp/: CMakeLists.txt  fftwcpp.cpp  fftwcpp.h  fftwcpp_templates.h
scripts/: README.md  analyze_clang_tidy_fixes.py  run_tests_gen_coverage.sh  summarize_build_log.py  verify_versions.py
src/: CMakeLists.txt  rsantenna.cpp  rsantenna.h  rsdebug.cpp  rsdebug.h  rsdsp.cpp  rsdsp.h  rsgeometry.cpp  rsgeometry.h  rshdf5.cpp  rshdf5.h  rsinterp.cpp  rsinterp.h  rsmain.cpp  rsmultipath.cpp  rsmultipath.h  rsnoise.cpp  rsnoise.h  rsobject.cpp  rsobject.h  rsparameters.cpp  rsparameters.h  rspath.cpp  rspath.h  rspattern.cpp  rspattern.h  rsplatform.cpp  rsplatform.h  rspolarize.cpp  rspolarize.h  rsportable.cpp  rsportable.h  rspulserender.cpp  rspulserender.h  rspython.cpp  rspython.h  rsradar.cpp  rsradar.h  rsradarwaveform.cpp  rsradarwaveform.h  (+16 more)
test/: CMakeLists.txt
test/regressionsuite/: runtest.sh  test.sh  test1.fersxml  test2.fersxml  test3.fersxml  test5.fersxml  test6.fersxml
test/regressionsuite/test1/correct/: Recv2_results.fersxml  Recv3_results.fersxml
test/regressionsuite/test3/: pulse.csv
test/regressionsuite/test3/correct/: recv_site1_results.fersxml
test/regressionsuite/test6/: pn.csv
test/test_cases/: test1.fersxml  test2.fersxml  test4.fersxml  test7.fersxml  test8.fersxml
test/test_cases/test1/: 5000ns_mono.csv
test/test_cases/test1/correct/: Mono1_results.fersxml
test/test_cases/test2/correct/: Mono1_results.fersxml
test/test_cases/test4/: pulse.csv
test/unit_tests/: CMakeLists.txt  clock_test.cpp  fft_test.cpp  filter_test.cpp  noisegen_test.cpp  path_test.cpp  signal_test.cpp  timing_test.cpp  upsample_test.cpp
tutorials/: fers.py  server.sh  tutorial_notebook.ipynb
utilities/: CMakeLists.txt  README  cluttergen.cpp  cluttergen2d.cpp  csv2antenna.c  h52raw.cpp
verification/oversampling/: CMakeLists.txt  README.md  REPORT.md  run_and_analyze.py
verification/oversampling/src/: CMakeLists.txt  main.cpp
verification/oversampling/src/core/: config.h  logging.cpp  logging.h  parameters.h
verification/oversampling/src/interpolation/: interpolation_filter.cpp  interpolation_filter.h  interpolation_point.h
verification/oversampling/src/processing/: finalizer_pipeline.cpp  finalizer_pipeline.h  signal_processor.cpp  signal_processor.h
verification/oversampling/src/serial/: response.cpp  response.h
verification/oversampling/src/signal/: dsp_filters.cpp  dsp_filters.h  radar_signal.cpp  radar_signal.h
xml_schema/: README.md  fers-xml.dtd  fers-xml.xsd
